Fix overflow of text:fontend feature

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -645,3 +645,13 @@ body
 {
   color: #DF2416;
 }
+.text-justify
+{
+  word-wrap: break-word;
+  word-break:break-word;
+}
+.title
+{
+  border-bottom: 1px dashed #CFCFCF;
+  font-weight: 700;
+}
